# dora-ai

./: .dockerignore  .env.example  Makefile  README.md  pyproject.toml
datasets/routes/1/1/: action_desc.json  node_desc.json
datasets/routes/1/2/: action_desc.json  node_desc.json
datasets/routes/1/3/: action_desc.json  node_desc.json
datasets/routes/1/4/: action_desc.json  node_desc.json
datasets/routes/1/5/: action_desc.json  node_desc.json
datasets/routes/1/6/: node_desc.json
datasets/routes/10/0/: action_desc.json  node_desc.json
datasets/routes/10/1/: node_desc.json
datasets/routes/11/0/: action_desc.json  node_desc.json
datasets/routes/11/1/: action_desc.json  node_desc.json
datasets/routes/11/2/: node_desc.json
datasets/routes/12/0/: action_desc.json  node_desc.json
datasets/routes/12/1/: action_desc.json  node_desc.json
datasets/routes/12/2/: action_desc.json  node_desc.json
datasets/routes/12/3/: action_desc.json  node_desc.json
datasets/routes/12/4/: action_desc.json  node_desc.json
datasets/routes/12/5/: node_desc.json
datasets/routes/13/0/: action_desc.json  node_desc.json
datasets/routes/13/1/: action_desc.json  node_desc.json
datasets/routes/13/2/: node_desc.json
datasets/routes/14/0/: action_desc.json  node_desc.json
datasets/routes/14/1/: action_desc.json  node_desc.json
datasets/routes/14/2/: action_desc.json  node_desc.json
datasets/routes/14/3/: action_desc.json  node_desc.json
datasets/routes/14/4/: action_desc.json  node_desc.json
datasets/routes/14/5/: node_desc.json
datasets/routes/2/0/: action_desc.json  node_desc.json
datasets/routes/2/1/: action_desc.json  node_desc.json
docker/: docker-compose.yaml
help/neo4j/import/: graph_export.json
help/qdrant/storage/: raft_state.json
src/backend/: main.py
src/backend/api/: text_to_text.py
src/backend/models/: schemas.py
src/backend/services/: text_processor.py
src/indexing/: clean_dataset.py  get_action.py  get_graph.py  get_node.py  get_qdrant.py  state_id_fix.py
src/rag/: find_nearest_path.py  find_target_node.py  query.py  utils.py
stt/: speech_to_text.py
(+323 files in other folders)
