[project]
name = "dora-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Borysevych",email = "borysevych.oleh87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0.1"

[tool.poetry.dependencies]
python-dotenv = "1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.isort]
py_version = 311
line_length = 140

